add tool to cache maps

--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,10 @@ img {
 	object-fit: contain;
 }
 
+.map {
+	border: thin solid black;
+}
+
 .annual-plots {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
