--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<title>{{ page.title }}</title>
 	</head>
 	<body>
 		{{ content }}
